...
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="@dimen/vertical_2" />


    <ScrollView
      android:id="@+id/horizontal_AdCreation_scrollView"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/guideline15"
      app:layout_constraintStart_toStartOf="@+id/guideline14"
      app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/vertical_AdCreation_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/title_AdCreation_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
...
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/street_AdCreation_editText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/editStreetAdCreation"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/number_AdCreation_ediText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="0.5"
                    android:hint="@string/editNumberAdCreation"
                    android:inputType="text"
...
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/city_AdCreation_editText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/editCityAdCreation"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/npa_AdCreation_editText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="0.5"
                    android:hint="@string/editNpaAdCreation"
                    android:inputType="number"
...
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/price_AdCreation_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="0"
                    android:ems="6"
...
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/descriptionAdCreation"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/description_AdCreation_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
...
                android:inputType="textMultiLine"
                android:maxLines="15"
                android:minLines="3"
                android:scrollbars="vertical" />

            <HorizontalScrollView
              android:id="@+id/picturesScroll_AdCreation_ScrollView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="16dp">

                <LinearLayout
                  android:id="@+id/pictures_AdCreation_linearLayout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal" />
            </HorizontalScrollView>

            <Button
              android:id="@+id/addPhoto_AdCreation_button"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="16dp"
              android:paddingStart="40dp"
              android:paddingEnd="16dp"
              android:layout_marginStart="@dimen/margin_button"
...
              android:layout_marginEnd="@dimen/margin_button"
              android:text="@string/createPanoramaTourButton"
              android:textAllCaps="false"
              android:textColor="@color/primaryStart"
              android:textSize="16sp" />
            <Button
              android:id="@+id/confirm_AdCreation_button"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="16dp"
              android:layout_marginBottom="16dp"
              android:layout_marginStart="@dimen/margin_button"
              android:layout_marginEnd="@dimen/margin_button"
...
