<resources>
    <string name="Address">Address</string>
    <string name="Price">Price</string>
    <string name="app_name">AppArt</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="email_reset">Enter your email address</string>
    <string name="reset_button">Reset password</string>
    <string name="login_failed_snack">Login failed !</string>
    <string name="saveUserFail_Login">Failed to auto-save user, please log in again</string>
    <string name="create_account_failed_snack">Create account failed !</string>
    <string name="invalid_email_snack">Invalid email !</string>

    <!-- AdActivity stuff -->
    <string name="backbutton_desc">Close ad</string>
    <string name="vtourbutton_text">Virtual Tour</string>
    <string name="address">Address:</string>
    <string name="default_loading">loading…</string>
    <string name="price">Price:</string>
    <string name="description">Description:</string>
    <string name="user">Advertiser:</string>
    <string name="contactbutton_text">Contact</string>
    <string name="seeLocationText">Location</string>
    <string name="seeNearbyPlacesText">Nearby places</string>
    <string name="intentLocationForMap">LOCATION</string>
    <string name="loadFail_Ad">Failed to load the ad, please retry later</string>
    <string name="favFail_Ad">Failed to add to favorites, please retry later</string>
    <string name="localFavFail_Ad">Failed to save the new favorite locally</string>
    <string name="favSuccess_Ad">Added to favorites!</string>
    <string name="userNotLoggedIn_Ad">You cannot add to favorites if you are not logged in</string>

    <!-- MapActivity stuff -->
    <string name="alertDialogMessage">The application could not locate the apartment.</string>
    <string name="alertDialogButton">OK</string>

    <!-- Mock ad stuff -->

    <!-- Ad photo layout -->
    <string name="photo_descprition">Photo</string>

    <!-- Contact info dialog stuff -->
    <string name="default_hidden">Hidden by the advertiser</string>
    <string name="dialog_phone">Phone number:</string>
    <string name="dialog_username">username</string>
    <string name="dialog_email">Email address:</string>
    <string name="dialog_close">Close</string>

    <!-- VirtualTourActivity stuff -->
    <string name="action_account">Account</string>
    <string name="action_logout">Log Out</string>
    <string name="action_map">Map</string>

    <!-- Strings for User Profile UI -->
    <string name="uniAccountClaimer">  UNI account  </string>
    <string name="backButtonText"> BACK </string>
    <string name="editProfileButtonText"> Edit profile </string>
    <string name="doneButtonText"> Confirm </string>
    <string name="ageText"> Age </string>
    <string name="phoneNumberText"> Phone </string>
    <string name="nameText"> Name </string>
    <string name="emailText"> Email </string>
    <string name="genderText"> Gender </string>
    <string name="nonUniAccountClaimer">  Regular account </string>
    <string name="removeProfilePicture"> REMOVE </string>
    <string name="changeProfilePicture"> CHANGE </string>
    <string name="updateUserFailedInDB">  Information update failed, try again </string>
    <string name="updateUserImageFailedInDB">  Image update failed, try again </string>
    <string-array name="genderList">
        <item> </item>
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>
    <string name="contactAdUser">Contact</string>
    <string name="localSaveFailed_User">Failed to save updates locally!</string>
    <string name="loadFailed_User">Failed to load user information</string>
    <string name="cameraAdButtonDesc">Add Picture</string>

    <!-- Strings for Step Counter UI -->
    <string name="stepsToHomeSentence">How many steps till home? </string>
    <string name="stepsFromLastBootSentence"> steps done from last boot </string>
    <string name="startButtonText"> Start </string>
    <string name="stopButtonText"> Stop </string>
    <string name="closeButtonText"> Close </string>
    <string name="stepCounterInToolbar"> Step Counter </string>
    <string name="noStepDetectorSensorErrorMessage"> Attention: this device has no step detector sensor. This causes higher latency and less accurate step count! </string>
    <string name="noStepCounterSensorErrorMessage"> Attention: this device does not support the step counter sensor! </string>
    <string name="loadingMessage"> loading… </string>

    <!--  -->

    <string name="createPanoramaTourButton">Panorama Tour</string>
    <string name="cameraButtonText">Camera</string>
    <string name="galleryButtonText">Gallery</string>
    <string name="createAccountPasswordFieldHint">Enter a password</string>
    <string name="createAccountButtonText">Create Account</string>
    <string name="backToLoginFromCreateButtonText">Back to login</string>
    <string name="createAccountEmailFieldHint">Enter an email</string>
    <string name="loginButtonText">Log In!</string>
    <string name="resetPasswordButtonText">Password Forgotten</string>
    <string name="createAccountFromLoginButtonText">Create account</string>
    <string name="resetConfirmationViewText">If this address is valid, you will receive a link to change your password</string>
    <string name="goToLoginFromResetButtonText">Log In Menu</string>
    <string name="loadingTextAdActivity">Loading…</string>
    <string name="editTitleAdCreation">Title</string>
    <string name="streetAdCreation">Street:</string>
    <string name="buttonInfoMessageAdNotLoaded">The ad information is not available yet !</string>

    <!-- AdCreationActivity stuff -->
    <string name="numberAdCreation">Number:</string>
    <string name="editStreetAdCreation">Street address</string>
    <string name="editNumberAdCreation">0A</string>
    <string name="cityAdCreation">City:</string>
    <string name="npaAdCreation">NPA:</string>
    <string name="editCityAdCreation">City</string>
    <string name="editNpaAdCreation">0000</string>
    <string name="priceAdCreation">Price:</string>
    <string name="periodAdCreation">Each:</string>
    <string name="editPriceAdCreation">00000</string>
    <string name="francsAdCreation">Fr.</string>
    <string name="descriptionAdCreation">Description:</string>
    <string name="editDescriptionAdCreation">A cool description</string>
    <string name="cameraButtonAdCreation">Photos</string>
    <string name="confirmButtonAdCreation">Post</string>
    <string name="toolbarTitle_AdCreation">Create an ad</string>
    <string name="snackbarFailed_AdCreation">There was an error while posting your ad, please try again later</string>
    <string name="snackbarFailedLocation_AdCreation">Please check that you put the right location!</string>
    <string name="snackbarNotFilled_AdCreation">Some fields haven\'t been filled!</string>
    <string name="snackbarNoPhotos_AdCreation">Please add at least one image!</string>
    <string name="openAdCreationDescription_Scrolling">Open page for creating an ad</string>

    <!-- ScrollingActivity stuff -->
    <string name="searchDescription_Scrolling">Which city?</string>
    <string name="confirmCameraButtonText">Confirm</string>
    <string name="scrollingActivityAlertDialogMessage">Are you sure you want to log out ?</string>
    <string name="scrollingActivityAlertDialogPositiveButton">Yes</string>
    <string name="scrollingActivityAlertDialogNegativeButton">No</string>

    <!-- CameraActivity stuff -->
    <string name="canceledNoImage"> "Canceled: you did not upload any image " </string>
    <string name="leftButtonDescription_Panorama">Load previous image</string>

    <!-- PanoramaActivity stuff -->
    <string name="rightButtonDescription_Panorama">Load next image</string>
    <string name="snackbarError_Panorama">There was an error loading the image, please try again later.</string>


    <!-- LocationActivity stuff -->
    <string name="permissionGranted">Permission granted</string>

    <!-- LocationActivity stuff -->
    <string name="permissionRefused">Permission refused</string>

    <!-- ScrollingActivity stuff -->
    <string name="educationalPopup">Educational popup</string>
    <string name="setCallbackTextView">set</string>
    <string name="notSetCallbackTextView">not set</string>
    <string name="permissionDefault">Permission</string>
    <string name="currentLocation">Current location :</string>
    <string name="locationUnknown">unknown</string>
    <string name="getLocationButton">Get location</string>
    <string name="locationDefault">0.0</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="favorites">Favorites</string>
    <string name="userAds">Your Ads</string>

    <!-- FullScreenImageActivity stuff -->
    <string-array name="periodList">
        <item>Month</item>
        <item>Week</item>
        <item>Day</item>
    </string-array>
    <!-- FullScreenImageActivity stuff -->
    <string name="contentDescFullScreenImage">Photo</string>

    <!-- FullScreenImageActivity stuff -->
    <string name="localSaved_Favorite">Failed to save locally the new favorites</string>

    <!-- FilterActivity stuff -->
    <string name="filterTitle">Filter</string>
    <string name="filterPrice">Price range:</string>
    <string name="minPrice">min price</string>
    <string name="maxPrice">max price</string>
    <string name="chf">CHF/ month</string>
    <string name="filterLocation">Location:</string>
    <string name="locationRange">location range :</string>
    <string name="km">kilometres</string>
    <string name="confirmFilter">Save</string>
    <string name="resetFilter">Remove all</string>
    <string name="card_edit">Edit Ad</string>
    <string name="card_delete">Delete</string>
    <string name="action_bar_open">open</string>
    <string name="action_bar_close">close</string>

</resources>
