...
      android:textColor="@color/primaryStart"
      android:textSize="16sp"
      app:layout_constraintBottom_toTopOf="@+id/guideline18"
      app:layout_constraintEnd_toStartOf="@+id/guideline17"
      app:layout_constraintStart_toStartOf="@+id/guideline16" />
    <Button
      android:id="@+id/camera_Camera_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:paddingStart="40dp"
      android:paddingEnd="16dp"
      android:background="@drawable/style_secondary"
      android:drawableEnd="@drawable/ic_camera"
...
      android:textColor="@color/primaryStart"
      android:textSize="16sp"
      app:layout_constraintBottom_toTopOf="@+id/guideline19"
      app:layout_constraintEnd_toStartOf="@+id/guideline17"
      app:layout_constraintStart_toStartOf="@+id/guideline16" />
    <Button
      android:id="@+id/confirm_Camera_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:background="@drawable/style_primary"
      android:text="@string/confirmCameraButtonText"
      android:textAllCaps="false"
      android:textColor="#FFFFFF "
...
